k8s-rpi-apps-hass/03-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-ingress
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/hass"    
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`<hasshostname>`)
    kind: Rule
    services:
    - name: home-assistant
      port: 8123
